# english-to-libran-text-to-voice

./: .cursorrules  .gitignore  .versionrc  ISSUE_TRANSLATOR_IMPLEMENTATION.md  README.md  UI_IMPROVEMENTS.md  env.example  jsconfig.json  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.test.json  tsconfig.worker.json  vitest.config.coverage.ts  vitest.config.mjs
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
docs/: ISSUE_ORGANIZATION_PLAN.md  ML_INFRASTRUCTURE.md  ML_QUICK_REFERENCE.md  OAUTH_SETUP.md  ORGANIZATION_SUMMARY.md  PROJECT_STATE_ANALYSIS.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SEMANTIC_VERSIONING.md  TEST_COVERAGE_PLAN.md  TEST_QUALITY_GUIDE.md
examples/: ml-example.js
lib/: analytics.ts  api-guardrails.ts  api-security.ts  clean-tts.ts  cleanup-handler.ts  dynamic-voice-filter.ts  error-taxonomy.ts  logger.ts  rate-limiter.ts  simple-voice-system.ts  tts-cache.ts  universal-security-client.ts  universal-security.ts  voice-settings.ts  voices.ts  worker-utils.js  worker-utils.js.map  worker-utils.ts
scripts/: add-epic-issues-to-project.ps1  coverage-report.js  detect-flaky-tests.js  dict-import-libran.js  dict-import.js  milestone_lable_and_issue_creation.ps1  ml-setup.js  release.js  run-all-tests.js  run-tests.js  security-audit.js  setup-dev-https.js  setup-epic-relationships-simple.ps1  setup-epic-relationships-with-labels.ps1  setup-epic-relationships.ps1  test-ci.js
test/: setup.ts
tests/: test_converter.py  test_synthesizer.py
(+95 files in other folders)
