[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "english-to-libran-voice"
version = "0.1.0"
description = "Convert English text into a fictional Libran language and generate simple audio"
authors = [{name = "Project Maintainers"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
libran-voice = "english_to_libran_voice.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
